코멘토 2주차 과제

--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/hongsukhwan/Downloads/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
